@@ -78,4 +78,4 @@ is($x, "9903520314281112085086151826",
 #############################################################################
 # all the other tests
 
-require 't/bigintpm.inc';       # all tests here for sharing
+require './t/bigintpm.inc';       # all tests here for sharing
