@@ -15,7 +15,7 @@ use Math::BigFloat;
 our $mbi = 'Math::BigInt';
 our $mbf = 'Math::BigFloat';
 
-require 't/mbimbf.inc';
+require './t/mbimbf.inc';
 
 # some tests that won't work with subclasses, since the things are only
 # guaranteed in the Math::Big(Int|Float) (unless subclass chooses to support
