@@ -14,7 +14,7 @@ our ($CLASS, $CALC);
 $CLASS = "Math::BigFloat::Subclass";
 $CALC  = Math::BigFloat->config('lib');         # backend library
 
-require 't/bigfltpm.inc';	# perform same tests as bigfltpm
+require './t/bigfltpm.inc';	# perform same tests as bigfltpm
 
 ###############################################################################
 # Now do custom tests for Subclass itself
